<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/biblioteca"
        android:icon="@drawable/ic_livraria_book"
        android:id="@+id/bottomNavigationBiblioteca"/>

    <item
        android:title="@string/favoritos"
        android:icon="@drawable/ic_favorito_coracao"
        android:id="@+id/bottomNavigationFavorito"/>

    <item
        android:title="@string/conclu_dos"
        android:icon="@drawable/ic_concluidos_check"
        android:id="@+id/bottomNavigationConcluido"/>

    <item
        android:title="@string/anota_es"
        android:icon="@drawable/ic_anotacoes_notes"
        android:id="@+id/bottomNavigationAnotacoes"/>

    <item
        android:title="@string/loja"
        android:icon="@drawable/ic_loja"
        android:id="@+id/bottomNavigationLoja"/>

</menu>