<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:backgroundTintMode="screen">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="64sp"
        android:fontFamily="@font/breathe_fire_iii"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_text_nome"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_usuario_icon"
        app:startIconTint="@color/white80"
        android:layout_marginHorizontal="16dp"
        android:textColorHint="@color/white80"
        android:layout_marginTop="64dp"
        app:hintTextColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:background="@color/black_15">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_nome_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/no_color"
            android:hint="@string/nome_de_usuario"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:shadowColor="@color/no_color"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_text_email"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_text_nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_email_icon"
        app:startIconTint="@color/white80"
        android:layout_marginHorizontal="16dp"
        android:textColorHint="@color/white80"
        android:layout_marginTop="32dp"
        app:hintTextColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:background="@color/black_15">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/no_color"
            android:hint="@string/email_edit_text"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_text_confirmar_email"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_text_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_email_icon"
        app:startIconTint="@color/white80"
        android:layout_marginHorizontal="16dp"
        android:textColorHint="@color/white80"
        android:layout_marginTop="32dp"
        app:hintTextColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:background="@color/black_15">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_confirmar_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/no_color"
            android:hint="@string/confirmar_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_text_senha"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_text_confirmar_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white80"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_password_icon"
        app:startIconTint="@color/white80"
        android:layout_marginHorizontal="16dp"
        android:textColorHint="@color/white80"
        android:layout_marginTop="32dp"
        app:hintTextColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:background="@color/black_15">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_Text_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/senha"
            android:backgroundTint="@color/no_color"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_text_confirmar_senha"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_text_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white80"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_password_icon"
        app:startIconTint="@color/white80"
        android:layout_marginHorizontal="16dp"
        android:textColorHint="@color/white80"
        android:layout_marginTop="32dp"
        app:hintTextColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:background="@color/black_15">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_confirmar_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirmar_senha"
            android:backgroundTint="@color/no_color"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/criar_conta_btn"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:text="@string/criar_conta"
        android:layout_marginHorizontal="96dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_text_confirmar_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_verde_padrao"/>

</androidx.constraintlayout.widget.ConstraintLayout>