<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:backgroundTintMode="screen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blac_55"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/inputImageLivro"
        android:layout_width="125dp"
        android:layout_height="170dp"
        android:layout_marginTop="64dp"
        android:alpha="0.8"
        android:background="@color/no_color"
        android:elevation="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/insira_foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_text_nome_livro"
        app:layout_constraintTop_toBottomOf="@id/inputImageLivro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:textColorHint="@color/white80"
        android:layout_marginTop="32dp"
        app:hintTextColor="@color/white"
        android:background="@drawable/custom_inputs">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_nome_livro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/no_color"
            android:hint="@string/nome_do_livro"
            android:inputType="text"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_text_nome_autor"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_text_nome_livro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:textColorHint="@color/white80"
        android:layout_marginTop="32dp"
        app:hintTextColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:background="@color/black_15">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_nome_autor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/no_color"
            android:hint="@string/nome_do_autor"
            android:inputType="text"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edit_text_total_paginas"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_text_nome_autor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:textColorHint="@color/white80"
        android:layout_marginTop="32dp"
        app:hintTextColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:background="@color/black_15">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_total_paginas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/no_color"
            android:hint="@string/n_mero_de_p_ginas"
            android:inputType="number"
            android:textColor="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_criar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/criar"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_text_total_paginas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="96dp"
        android:background="@drawable/button_verde_padrao"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>