<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blac_55"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/bibliotecaSearchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLivro"
        android:layout_width="match_parent"
        android:layout_height="740dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/action_button_livro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/action_button_anotacao"
        app:layout_constraintEnd_toEndOf="@id/action_button_add"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        android:clickable="true"
        android:focusable="true"
        android:contextClickable="true"
        android:backgroundTint="@color/cor_primaria"
        app:iconTint="@color/white"
        app:icon="@drawable/ic_livro"
        android:contentDescription="@string/adicionar_livro"
        android:text="@string/adicionar_livro"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/action_button_anotacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/action_button_add"
        app:layout_constraintEnd_toEndOf="@id/action_button_add"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        android:contextClickable="true"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/cor_primaria"
        app:iconTint="@color/white"
        app:icon="@drawable/ic_anotacoes_notes"
        android:contentDescription="@string/adicionar_anota_o"
        android:text="@string/adicionar_anota_o"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="96dp"
        android:contextClickable="true"
        android:backgroundTint="@color/cor_primaria"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/white"
        android:src="@drawable/ic_mais_add"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>